# datasette-chart

./: .gitignore  README.md  metadata.yml  package-lock.json  package.json  pyproject.toml  spotify.db
datasette_chart/: __init__.py
datasette_chart/static/: chart.js
tests/: test_chart.py
